--- a/src/main/resources/templates/products/add.html
+++ b/src/main/resources/templates/products/add.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Add Product</title>
+    <div th:insert="~{fragments :: imports}"></div>
 </head>
 <body>
-    <h1>Add Product</h1>
+    <h1 class="text-danger">Add Product</h1>
     <form th:action="@{/products}" th:object="${product}" method="post">
         <label>Name:</label>
         <input type="text" th:field="*{name}" />
