--- a/src/main/resources/templates/products/edit.html
+++ b/src/main/resources/templates/products/edit.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Edit Product</title>
+    <div th:insert="~{fragments :: imports}"></div>
 </head>
 <body>
-    <h1>Edit Product</h1>
+    <h1 class="text-danger">Edit Product</h1>
     <form th:action="@{'/products/' + ${product.id}}" th:object="${product}" method="post">
         <label>Name:</label>
         <input type="text" th:field="*{name}" />
