--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Product List</title>
+    <div th:insert="~{fragments :: imports}"></div>
 </head>
 <body>
-    <h1>Product Inventory</h1>
+    <h1 class="text-danger">Product Inventory</h1>
     <a href="/products/add">Add New Product</a>
     <table border="1">
         <thead>
