--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fragments</title>
-	<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
-	<link th:rel="stylesheet" th:href="@{/css/style.css}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fragments</title>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
+    <link th:rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-	<div th:fragment="imports">	
-		<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}"/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
-	</div>
+    <div th:fragment="imports">
+        <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.2/css/bootstrap.min.css}" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous">
+    </div>
+
+    <div th:fragment="emptyProducts">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Price</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>#1</td>
+                    <td>Product Name 1</td>
+                    <td>Descriptionsss</td>
+                    <td>9999€</td>
+                    <td><i class="fa-solid fa-infinity"></i></td>
+                    <td>
+                        <div class="btn btn-warning opacity-25"><i class="fa-solid fa-pencil"></i></div>
+                        <div class="btn btn-danger opacity-25"><i class="fa-solid fa-trash"></i></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>#2</td>
+                    <td>Product Name 2</td>
+                    <td>Descriptionsss</td>
+                    <td>9999€</td>
+                    <td><i class="fa-solid fa-infinity"></i></td>
+                    <td>
+                        <div class="btn btn-warning opacity-25"><i class="fa-solid fa-pencil"></i></div>
+                        <div class="btn btn-danger opacity-25"><i class="fa-solid fa-trash"></i></div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>#3</td>
+                    <td>Product Name 3</td>
+                    <td>Descriptionsss</td>
+                    <td>9999€</td>
+                    <td><i class="fa-solid fa-infinity"></i></td>
+                    <td>
+                        <div class="btn btn-warning opacity-25"><i class="fa-solid fa-pencil"></i></div>
+                        <div class="btn btn-danger opacity-25"><i class="fa-solid fa-trash"></i></div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
